--- a/Creating a CSS Menu/creating a css menu.html
+++ b/Creating a CSS Menu/creating a css menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"
     <title> Basic CSS Menu</title>
-    <link rel="stylesheet" href="./creating a css menu.css">
+    <link rel="stylesheet" href="./creating a css menu/Creating a CSS menu/CSS/ creating a css menu.css">
     </head>
     <body>
     <div class="wrap">
