--- a/The project Folder/The Hotspot.html
+++ b/The project Folder/The Hotspot.html
@@ -2,17 +2,16 @@
 <html lang="en>"
 <html>
 </head>
-<title> Galaxy/Solar System</title>
-<h1>Planets in the solar System</h1>
+<body text="orange"
+<body background="planets.jpg">
+<title>Galaxy/Solar System</title>
+<h1 align="center">Planets in the solar System</h1>
 <p><b>There are eight planets in the Solar system </b></p>
-<body>
-    <img src="planets.jpg"/>
-</body>
-</html>
+<body> 
 <table>
     <colgroup>
-    <col span="1" style="background-color:rgb(56, 4, 241)">
-    <col style="background-color: yellow">
+    <col span="1" style="background-color:rgb(19, 16, 1)">
+    <col style="background-color: rgb(17, 17, 0)">
     </colgroup>
     <tr>
         <th>Name of Planet</th>
@@ -21,7 +20,6 @@
         <td>Mercury, Venus, Earth, Mars, Jupiter, Saturn, Neptune and Uranus</td>
         </tr>
 </table>
-<html>
     <em> In the form below submit which planet is the nearest to Earth.</em>
 <form action="" method="get">
 First name: <input type="text" name="Firtst_Name"><br>
@@ -29,9 +27,10 @@ Last name: <input type="text" name="Last_Name"><br>
 Planet: <input type="Planet" name="Planet"><br>
 <input type="submit" value="submit">
 </form>
-</html>
+</body>
 <footer> <follow>Follow Us:</p>
     <a href= "https://www.youtube.com/watch?v=libKVRa01L8"> On Youtube</a>
     </p>
     <p>&copy; Copyright 2016, All rights Reserved. </p>
     </footer>
+</html>
