Finished Menu Project

--- a/Creating Effect/Image Effect.html
+++ b/Creating Effect/Image Effect.html
@@ -13,7 +13,7 @@ img {
 
 <p>Convert the image to grayscale:</p>
 
-<img src="icons.png" alt="icons" width="200" height="200">
+<img src="./Image folder/icons.png" alt="icons" width="200" height="200">
 
 <p><strong>Note:</strong> The photo will come will be a little grey.</p>
 
