--- a/The project Folder/Galaxy System.html
+++ b/The project Folder/Galaxy System.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en>"
-<html>
-</head>
-<body text="orange"
-<body background="planets.jpg">
+<html lang="en">
+<head>
 <title>Galaxy/Solar System</title>
+<meta charset="utf-8">
+</head>
+<body> 
 <h1 align="center">Planets in the solar System</h1>
 <p><b>There are eight planets in the Solar system </b></p>
-<body> 
 <table>
     <colgroup>
     <col span="1" style="background-color:rgb(19, 16, 1)">
