--- a/Creating a CSS Menu/creating a css menu.html
+++ b/Creating a CSS Menu/creating a css menu.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<htnl lang="en"
+<html lang="en">
 <head>
     <meta charset="utf-8"
     <title> Basic CSS Menu</title>
-    <link rel="stylesheet" href="./creating a css menu/Creating a CSS menu/CSS/ creating a css menu.css">
+    <link rel="stylesheet" href="./CSS/creating a css menu.css">
     </head>
     <body>
     <div class="wrap">
         <div class="menu-container">
-            <ul class="menu"></ul>
+            <ul class="menu">
             <li>Home</li>
             <li>About</li>
             <li>Portfolio</li>
