--- a/Creating Effect/Photo package.html
+++ b/Creating Effect/Photo package.html
@@ -10,7 +10,7 @@
   <div class="photo-container">
   <div class="photo">
 
-<img src="./Image folder/thumb/thumbnail_2.png" alt="">
+<img src="./Image folder/thumb/thumbanail.png" alt="">
 <div class="photo-overlay">
   <h3 class="white-head">Click to Enlarge</h3>
   <p>we have several space launches departing daily, book your flight today!</p>
@@ -19,4 +19,5 @@
 </div>
 <!--END-CONTAINER 1-->
 </body>
+
 </html>
