Galaxy website finale change

--- a/Solar-Galaxy Website/index.html
+++ b/Solar-Galaxy Website/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <heda>
+    <head>
     <meta charset="utf-8">
     <title>The Space Station and Resort</title>
     <link rel="stylesheet" href="./Shared.css">
