--- a/Second Submission Assignment/Second Submission Assignment.html
+++ b/Second Submission Assignment/Second Submission Assignment.html
@@ -5,27 +5,25 @@
     <title>This is the Title</title>
 </head>
 
-<body 
-style="background-color:light blue;
-<font color="darkblue"> 
+<body style="background-color:lightblue;color:darkblue"> 
 
 <h1>This is the Heading 1</h1>
 
 <h2>This is the Heading 2 element</h2>
 
-<p><strong><b>I am a bold student of The Tech Academy.</b></strong></p>
+<p><b>I am a bold student of The Tech Academy.</b></p>
 
 <p>
     <a href="learncodinganywhere.com/">This is The Tech Academys website.</a>
 </p>
 
-<img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png (Links to an external site.)"alt="The Tech Academy Logo" width=(600px); height=(300px)>
+<img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png"alt="The Tech Academy Logo" width=(600px); height=(300px) style="border-style:dashed; border: width 2px; border-color:red;"> 
 
 
 <h3><centered>Have you seen The Tech Academy's Student Orientation video?</centered></h3>
 
                                     
-<iframe width="560" height="315"src=”https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4>frameborder="0"allowfullscreen></iframe>
+<iframe width="560" height="315"src="https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4"frameborder="0"allowfullscreen></iframe>
 
 </body>
 
