--- a/Student_Portfolio/index.html
+++ b/Student_Portfolio/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
-        <title>Your Name Here</title>
+        <title>Tech Academy Portfolio</title>
+        <!-- The Your Name Here in the title is changed to Tech Academy Portfolio-->
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
     </head>
 
@@ -26,26 +27,26 @@
         <!--Background video-->
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
-                <source src="images/video/Typing.mp4" type="video/mp4">
+                <source src="./images/video/videoplayback (1).mp4" type="video/mp4"> <!--Video was  changed-->
                 <!--Display message if video fails to run-->
                 Your browser does not support HTML5 video.
             </video>
         </div>
 
         <!--Video text-->
-        <div class="Video_Text">
-            <h1 class="white-text">Your Name's Portfolio</h1>
+        <div class="Video_Text">    
+            <h1 class="white-text">TECH ACADEMY'S PORTFOLIO</h1> <!--your name portfolio is changed to Tech academy's portfolio-->
             <strong>
-                <p class="center">
-                    <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
-                        <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
-                        <br>field of battle and to command such unswervingly dutiful actors or troops.
+                <p class="center">     <!--information was changed to personalized the website-->
+                    <q>. Software and Web Developers are the creative minds behind computers and websites. Some software developers develop the applications that allow people to do specific tasks on computers or devices, while other develop the underlying systems that run the devices or control the networks. <!-- The was modified-->
+                        <br> Developers are increasingly responsible for the full lifecycle of application development, including operational responsibilities. 
+                        <br>They are to be treated with utmost respect and love.
                     </q>
-                    <br> -Joseph Weizenbaum
+                    <br> -Marlesa Bonnick
                     <br>
-                    <br> My name is ____. Welcome to my portfolio website. On it, I will tell you about my background and experience.
+                    <br> My name is Romario Bonnick. Welcome to my portfolio website. On it, I will tell you about my background and experience. <!--My name is change to my name is Romario Bonnick-->
                     <br>
-                    <br> Thank you for stopping by and enjoy! 
+                    <br> Thank you for visiting my website! 
                 </p>
             </strong>
         </div>
@@ -54,17 +55,17 @@
         <div class="Row" id="About">
             <!--Left column-->
             <div class="Column_2">
-                <img src="images/html_custom.png" alt="Replace with your own image and description">
+                <img src="./images/monitor.jpg" alt="About_Image"> <!--Image was inserted to replace the actual photo-->
             </div>
             <!--Right column-->
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    I am a software developer who loves to code! As a father of two, I enjoy time with my family and traveling. 
+                    I am a software developer who loves to code! As a husband to one wife, I love to spend time with her and travel. <!--The original sentence was modified-->
                     <br>
-                    <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
+                    <br>I am a graduate of <a href="https://www.academyoflearning.com/" target="_blank">Academy of Learning</a>’s Software and web developer program with experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. <!--school og graduation and link was changed from The tech academy to the academy of learning-->
                     <br>
-                    <br>I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
+                    <br>I am a Software and Web developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below! <!--change was made from full stock to software and web developer-->
                 </p>
             </div>
         </div>
@@ -90,7 +91,7 @@
         <div class="Row" id="Contact">
             <!--Contact image, left column-->
             <div class="Column_2 Column_tall">
-                <img src="images/html_custom.png" alt="Contact_Image">
+                <img src="./images/pexels-photo-270632.jpeg" alt="Contact_Image"> <!-- The insert image was replaced with the an actual photo-->
             </div>
             <!--Contact form, right column-->
             <div class="Column_1 Column_tall">
