--- a/Student_Portfolio/index.html
+++ b/Student_Portfolio/index.html
@@ -78,7 +78,7 @@
                 <p>
                     You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/the-tech-academy" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/Bonnick" target="_blank">Romario Bonnick Github</a></p>  <!--changes made I provided my own github account-->
                 </p>
             </div>
             <!--Right column-->
@@ -112,7 +112,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <p class="center">&Romario Bonnick.inc., <a href="https://www.academyoflearning.com" target="_blank">Academy of learning</a></p> <!--modification was made here to put my personal information-->
                 <br>
             </p>
         </footer>
